<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_heylist">
    <com.dd.ShadowLayout
        android:layout_centerInParent="true"
        android:layout_width="@dimen/shadow_layout_width"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/add_users_title"
                android:gravity="center"
                android:textSize="40sp"
                android:ems="10"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="31dp"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:textColor="@color/green_heylist"
                android:id="@+id/textView" />
            <Button
                android:id="@+id/add_user_existing"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:textColor="#FFFF"
                android:layout_width="214dp"
                android:layout_height="32dp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="152dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="#91A516"
                android:layout_weight="0.01"
                android:text="@string/existing"/>
            <Button
                android:id="@+id/add_user_new"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:textColor="#FFFF"
                android:layout_width="214dp"
                android:layout_height="32dp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="152dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="#91A516"
                android:layout_weight="0.01"
                android:text="@string/create_new_user"/>
            <Button
                android:id="@+id/back"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:textColor="#FFFF"
                android:layout_width="214dp"
                android:layout_height="32dp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="152dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="#91A516"
                android:layout_weight="0.01"
                android:text="@string/back"/>
        </LinearLayout>

    </com.dd.ShadowLayout>
</RelativeLayout>