<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/grey_heylist">
    <com.dd.ShadowLayout
        android:layout_centerInParent="true"
        android:background="#FFF"
        android:layout_width="@dimen/shadow_layout_width"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"

            android:gravity="center_horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="textPersonName"
                android:text="@string/create_group"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textSize="30sp"
                android:ems="10"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="31dp"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:paddingTop="4dip"
                android:paddingBottom="4dip"
                android:textColor="@color/green_heylist"
                android:id="@+id/textView" />
            <EditText
                android:layout_width="214dp"
                android:layout_height="32dp"
                android:inputType="textPersonName"
                android:gravity="center_horizontal"
                android:hint="@string/group_name"
                android:background="@drawable/text_rectangle"
                android:textColorHint="#96B7CA6C"
                android:ems="10"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="31dp"
                android:drawablePadding="10dip"
                android:layout_marginBottom="@dimen/text_margin"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:paddingTop="4dip"
                android:paddingBottom="4dip"
                android:textColor="@color/green_heylist"
                android:id="@+id/company_name" />

            <Button
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:text="@string/create"
                android:textColor="#FFFF"
                android:layout_width="214dp"
                android:layout_height="32dp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="152dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="#91A516"
                android:layout_weight="0.01"
                android:id="@+id/create_company_button" />
            <Button
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:text="@string/back"
                android:textColor="#FFFF"
                android:layout_width="214dp"
                android:layout_height="32dp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="152dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="#91A516"
                android:layout_weight="0.01"
                android:id="@+id/back" />
        </LinearLayout>
    </com.dd.ShadowLayout>
</RelativeLayout>